# nonebot-adapter-telegram

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot/adapters/telegram/: __init__.py  adapter.py  bot.py  cache.py  config.py  event.py  exception.py  menu_helper.py  message.py  models.py  utils.py
tools/: models_bak.py  models_genter.py
