[tool.poetry]
name = "nonebot-adapter-antelegram"
version = "0.1.0-dev8"
description = "Another unofficial Telegram adapter for nonebot2"
authors = ["ColdThunder11 <lslyj27761@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ColdThunder11/nonebot-adapter-telegram"
packages = [
  { include = "nonebot" }
]
keywords = ["bot", "telegram"]
classifiers = [
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

exclude = ["nonebot/__init__.py", "nonebot/adapters/__init__.py"]

[tool.poetry.dependencies]
python = "^3.7.3"
httpx = "^0.18.0"
nonebot2 = "^2.0.0a15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
