[tool.poetry]
name = "nonebot-adapter-antelegram"
version = "0.2.0-dev12"
description = "Another unofficial Telegram adapter for nonebot2"
authors = ["ColdThunder11 <lslyj27761@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ColdThunder11/nonebot-adapter-telegram"
packages = [
  { include = "nonebot" }
]
keywords = ["bot", "telegram"]
classifiers = [
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

exclude = ["nonebot/__init__.py", "nonebot/adapters/__init__.py"]

[tool.poetry.dependencies]
python = "^3.8.1"
httpx = { version = ">=0.20.0, <1.0.0", extras = ["http2"] }
nonebot2 = "^2.0.0rc2"
aiocache = "^0.11.1"
redis = ">=4.2.0rc1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
